k8s/account-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  labels:
    app: account-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
      - name: account-service
        image: registry.digitalocean.com/user-service/docker.io/account-service@sha256:04e8bd91e3e0f8e26500d5ce3e2aa8afb147ba64e57c1bee58fae8b08127621a
        ports:
        - containerPort: 3077
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
  
      imagePullSecrets:
      - name: do-registry
