k8s/dms-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dms-service
  labels:
    app: dms-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dms-service
  template:
    metadata:
      labels:
        app: dms-service
    spec:
      containers:
      - name: dms-service
        image: registry.digitalocean.com/user-service/docker.io/dms-service@sha256:85b3f068fd57bf7cc7400b13043c154d406a438d4105da54f4fe639c4aefc14d
        ports:
        - containerPort: 3073
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"

      imagePullSecrets:
      - name: do-registry



# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   annotations:
#     kompose.cmd: kompose convert -f docker-compose.yml
#     kompose.version: 1.26.1 (HEAD)
#   creationTimestamp: null
#   labels:
#     io.kompose.service: dms-service
#   name: dms-service
# spec:
#   replicas: 3
#   # replicas: 3 - use this: replicas as 3, when you go live live to increase the high availability of the api
#   selector:
#     matchLabels:
#       io.kompose.service: dms-service
#   strategy: {}
#   template:
#     metadata:
#       annotations:
#         kompose.cmd: kompose convert -f docker-compose.yml
#         kompose.version: 1.26.1 (HEAD)
#       creationTimestamp: null
#       labels:
#         io.kompose.service: dms-service
#     spec:
#       containers:
#         - env:
#             - name: DB_HOST
#               value: gdl-db-mysql-nyc3-49829-do-user-9991253-0.b.db.ondigitalocean.com
#             - name: DB_NAME
#               value: gdl
#             - name: DB_PASSWORD
#               value: yS6JVh3i3FtplyqU
#             - name: DB_PORT
#               value: "25060"
#             - name: DB_USERNAME
#               value: gdldev100

#             # System Authorization
#             - name: SYS_AUTH
#               value: GTT^$ED843yuygde6473T^$^W&(())43UUU67*!!43
#             - name: EKY
#               value: 434rfdvffv&@&
#             - name: BEARERAUTH
#               value: U2FsdGVkX1/2mrkmozD/1rrlHrtjfwEuXp5zh1uK0gDfPW+CvYftJaaS+ilRpMq3aTo9ZBLArPJ5cZvgefPo2A==
            
#             #services
#             # - name: ACCT_BASE_URL
#             #   value: https://test-accts.gdlapi.com.ng
#             # - name: SAVINVEST_BASE_URL
#             #   value: https://test-invests.gdlapi.com.ng

#           image: registry.digitalocean.com/user-service/docker.io/dms-service@sha256:d729faa92b026880cab1c1f969f9e28f5c998a5cf700665f5ee2e50b6a89af11
#           name: user-service
#           ports:
#             - containerPort: 3073
#           resources: {}
#       # restartPolicy: Always
#       imagePullSecrets:
#         - name: do-registry
# status: {}
