k8s/bankone-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankone-service
spec:
  type: NodePort
  ports:
    - port: 80  # Port on the service
      targetPort: 3047  # Port on the pods
      nodePort: 30047  # Optional: If not specified, Kubernetes will allocate a random port from the NodePort range
  selector:
    app: bankone-service  # Label selector to match the pods you want to expose abi No sabi



# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     kompose.cmd: kompose convert -f docker-compose.yml
#     kompose.version: 1.26.1 (HEAD)
#   creationTimestamp: null
#   labels:
#     io.kompose.service: bankone-service
#   name: bankone-service
# spec:
#   ports:
#     - name: "3047"
#       port: 80
#       targetPort: 3047
#   selector:
#     io.kompose.service: bankone-service
# status:
#   loadBalancer: {}
