k8s/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: NodePort
  ports:
    - port: 80  # Port on the service
      targetPort: 3079  # Port on the pods
      nodePort: 30079  # Optional: If not specified, Kubernetes will allocate a random port from the NodePort range
  selector:
    app: notification-service  # Label selector to match the pods you want to expose


# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     kompose.cmd: kompose convert -f docker-compose.yml
#     kompose.version: 1.26.1 (HEAD)
#   creationTimestamp: null
#   labels:
#     io.kompose.service: notification-service
#   name: notification-service
# spec:
#   ports:
#     - name: "3079"
#       port: 80
#       targetPort: 3079
#   selector:
#     io.kompose.service: notification-service
# status:
#   loadBalancer: {}
