k8s/ingres-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: myingres
spec:
  tls:
  - hosts:
    - test-user.gdlapi.com.ng
    - test-accts.gdlapi.com.ng
    - test-trans.gdlapi.com.ng
    - test-invests.gdlapi.com.ng
    - test-notify.gdlapi.com.ng
    - test-loans.gdlapi.com.ng
    - test-hpa.gdlapi.com.ng
    - test-site.gdlapi.com.ng
    - test-dms.gdlapi.com.ng
    - test-bankone.gdlapi.com.ng
    - test-symplus.gdlapi.com.ng
    secretName: echo-tls
  rules:
  - host: test-user.gdlapi.com.ng
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: user-service
            port: 
              number: 80
  - host: test-accts.gdlapi.com.ng
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: account-service
            port: 
              number: 80
  - host: test-trans.gdlapi.com.ng
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: transaction-service
            port: 
              number: 80
  - host: test-invests.gdlapi.com.ng
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: saveinvest-service
            port: 
              number: 80
  - host: test-notify.gdlapi.com.ng
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: notification-service
            port: 
              number: 80
  - host: test-loans.gdlapi.com.ng
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: loan-service
            port: 
              number: 80
  - host: test-hpa.gdlapi.com.ng
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hpa-service
            port: 
              number: 80
  - host: test-site.gdlapi.com.ng
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gdl-website
            port: 
              number: 80
  - host: test-dms.gdlapi.com.ng
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dms-service
            port: 
              number: 80
  - host: test-bankone.gdlapi.com.ng
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bankone-service
            port: 
              number: 80
  - host: test-symplus.gdlapi.com.ng
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: symplus-service
            port: 
              number: 80
